[project]
name = "pymmikub"
version = "0.0.1"
description = "Online Rummikub clone made using Python."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["pymmikub"]